--- a/views/new.ejs
+++ b/views/new.ejs
@@ -2,7 +2,7 @@
 
 <form action="/birds" method="POST">
   <label>
-    Name
+   Birds Name
     <input type="text" name="type">
     </label>
     <br><br>
